--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
+    "express-handlebars": "^8.0.1",
+    "hbs": "^4.2.0",
     "mysql2": "^3.14.1",
     "nestjs-zod": "^4.3.1",
     "reflect-metadata": "^0.2.2",
