--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "drizzle-orm": "^0.43.1",
     "express-handlebars": "^8.0.1",
     "hbs": "^4.2.0",
-    "mysql2": "^3.14.1",
     "nestjs-zod": "^4.3.1",
+    "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^3.24.4"
@@ -51,6 +51,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.47",
+    "@types/pg": "^8.15.2",
     "@types/supertest": "^6.0.2",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.18.0",
