--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DB_URL="mysql://root:pass@localhost:8080/mysql"
+DB_URL="postgresql://user:pass@localhost:5432/weatherapi"
 
 WEATHER_API_URL="http://api.weatherapi.com/v1"
 WEATHER_API_KEY=
