--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "drizzle-orm": "^0.43.1",
     "express-handlebars": "^8.0.1",
     "hbs": "^4.2.0",
+    "mailersend": "^2.5.0",
     "nestjs-zod": "^4.3.1",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
