--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main",
     "db:migrate": "drizzle-kit generate && drizzle-kit migrate",
+    "db:dev": "docker compose run --rm --service-ports db",
     "lint": "tsc -b --noEmit && eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
