--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
