--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
+ADMIN_SECRET="super-secret-admin-key"
+
+HOST="localhost"
+PORT="8000"
+APP_BASE_URL="http://localhost:8000"
+
 DB_URL="postgresql://user:pass@localhost:5432/weatherapi"
 
 WEATHER_API_URL="http://api.weatherapi.com/v1"
 WEATHER_API_KEY=
+
+MAILERSEND_API_KEY=
+MAILERSEND_DOMAIN=
