--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_BASE_URL="http://localhost:8000"
 DB_URL="postgresql://user:pass@localhost:5432/weatherapi"
 
 WEATHER_API_URL="http://api.weatherapi.com/v1"
-WEATHER_API_KEY=
+WEATHER_API_KEY=""
 
-MAILERSEND_API_KEY=
-MAILERSEND_DOMAIN=
+MAILERSEND_API_KEY=""
+MAILERSEND_DOMAIN=""
