--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mailersend": "^2.5.0",
     "nestjs-zod": "^4.3.1",
     "pg": "^8.16.0",
+    "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^3.24.4"
